make detailed actions visible, fix something about the clock

--- a/app/assets/stylesheets/aktions.scss
+++ b/app/assets/stylesheets/aktions.scss
@@ -132,3 +132,9 @@
   padding: 2px 6px;
   margin: 0px;
 }
+
+.detailed-action {
+  height: 250px;
+  overflow-y: scroll;
+  border: 5px solid white;
+}
